python-web-server/tests/http/requests/invalid/005.py
from web_server.http.errors import InvalidHeaderName

request = InvalidHeaderName
